--- a/Lab5/Report.tex
+++ b/Lab5/Report.tex
@@ -237,5 +237,23 @@ static void __exit stop_blink(void) {
 
 \section{Button-Controlled LED Blink Module}
 
+\begin{thebibliography}{9}
+\bibitem{linuxgit} 
+Torvalds: Linux Kernel Source Tree,
+\\\texttt{https://github.com/torvalds/linux}
+
+\bibitem{linuxdevicedrivers} 
+J. Corbet, A. Rubini, G. Kroah-Hartman: Linux Device Drivers,
+\\\texttt{https://lwn.net/Kernel/LDD3/}
+
+\bibitem{linuxkernel} 
+The Kernel Development Community: The Linux Kernel,
+\\\texttt{https://01.org/linuxgraphics/gfx-docs/drm/index.html}
+
+\bibitem{linuxinsides} 
+0xAX: Linux Inside,
+\\\texttt{https://www.gitbook.com/book/0xax/linux-insides/details}
+\end{thebibliography}
+
 
 \end{document}
